policies/docker-cis-5.19-ensure-mount-propagation-mode-is-not-enabled.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: docker-cis-5.19-ensure-mount-propagation-mode-is-not-enabled
spec:
  categories:
  - Docker CIS
  criteriaLocked: true
  description: Mount propagation mode allows mounting container volumes in Bidirectional,
    Host to Container, and None modes. Do not use Bidirectional mount propagation
    mode unless explicitly needed.
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on deployment csi-azuredisk-node in kube-system namespace
    deployment:
      name: csi-azuredisk-node
      scope:
        cluster: ''
        namespace: kube-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment csi-azurefile-node in kube-system namespace
    deployment:
      name: csi-azurefile-node
      scope:
        cluster: ''
        namespace: kube-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-cluster-csi-drivers namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-cluster-csi-drivers
        label: null
    image: null
    expiration: null
  - name: Don't alert on a pdcsi-node deployment
    deployment:
      name: pdcsi-node
      scope: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: 'GitOps - Docker CIS 5.19: Ensure mount propagation mode is not enabled'
  policySections:
  - sectionName: Section 1
    policyGroups:
    - fieldName: Mount Propagation
      booleanOperator: OR
      negate: false
      values:
      - value: BIDIRECTIONAL
  rationale: A Bidirectional mount is replicated at all mounts and changes made at
    any mount point are propagated to all other mount points. Mounting a volume in
    Bidirectional mode does not restrict any other container from mounting and making
    changes to that volume. As this is likely not a desirable option from a security
    standpoint, this feature should not be used unless explicitly required
  remediation: Do not mount volumes in Bidirectional propagation mode.
  scope: []
  severity: MEDIUM_SEVERITY
  disabled: false
